# rsomics-bam-depad

./: Cargo.toml  README.md
benches/: bench.rs
src/: bam_layout.rs  cigar.rs  cli.rs  driver.rs  lib.rs  posmap.rs
tests/: compat.rs
tests/golden/: padded.bam  padded.sam
